# llm-hallucination-reduction

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_enhanced.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: basic_usage.py
src/: __init__.py  benchmark_suite.py  hallucination_mitigator.py
tests/: test_benchmark_suite.py  test_hallucination_mitigator.py
theory-of-mind-benchmark/honest-ai-evaluations/honest-ai-evaluations/data/: ModelBehaviorArchitect_TakeHome.csv  career-pivot-encouragement-v3-evals copy.csv
